--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
+    "@google/genai": "^0.7.0",
     "body-parser": "^1.20.2",
-    "@google/genai": "^0.7.0"
+    "cors": "^2.8.5",
+    "express": "^4.21.2"
   }
-} 
+}
